# QUASAR-client

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  build.gradle  build.py  gradle.properties  main.cpp  settings.gradle
QuestClientApps/: CMakeLists.txt  settings.gradle.kts
QuestClientApps/Apps/: CMakeLists.txt
QuestClientApps/Apps/ATWClient/: CMakeLists.txt
QuestClientApps/Apps/ATWClient/Projects/Android/: AndroidManifest.xml  build.gradle  build.py  settings.gradle
QuestClientApps/Apps/ATWClient/include/: ATWClient.h
QuestClientApps/Apps/ATWClient/res/values/: strings.xml
QuestClientApps/Apps/ATWClient/src/: main.cpp
QuestClientApps/Apps/DPViewer/: CMakeLists.txt
QuestClientApps/Apps/DPViewer/Projects/Android/: AndroidManifest.xml  build.gradle  build.py  settings.gradle
QuestClientApps/Apps/DPViewer/include/: DPViewer.h
QuestClientApps/Apps/DPViewer/res/values/: strings.xml
QuestClientApps/Apps/DPViewer/src/: main.cpp
QuestClientApps/Apps/MeshWarpClient/: CMakeLists.txt
QuestClientApps/Apps/MeshWarpClient/Projects/Android/: AndroidManifest.xml  build.gradle  build.py  settings.gradle
QuestClientApps/Apps/MeshWarpClient/assets/: stream.sdp
QuestClientApps/Apps/MeshWarpClient/include/: MeshWarpClient.h
QuestClientApps/Apps/MeshWarpClient/src/: main.cpp
QuestClientApps/Apps/MeshWarpViewer/: CMakeLists.txt
QuestClientApps/Apps/MeshWarpViewer/include/: MeshWarpViewer.h
QuestClientApps/Apps/MeshWarpViewer/src/: main.cpp
QuestClientApps/Apps/QUASARViewer/: CMakeLists.txt
QuestClientApps/Apps/QUASARViewer/include/: QUASARViewer.h
QuestClientApps/Apps/QUASARViewer/src/: main.cpp
QuestClientApps/Apps/QuadsViewer/: CMakeLists.txt
QuestClientApps/Apps/QuadsViewer/include/: QuadsViewer.h
QuestClientApps/Apps/QuadsViewer/src/: main.cpp
QuestClientApps/Apps/QuestClient/: CMakeLists.txt
QuestClientApps/Apps/QuestClient/assets/: stream.sdp
QuestClientApps/Apps/QuestClient/include/: ATWClient.h  DPViewer.h  MeshWarpClient.h  MeshWarpClientStatic.h  ModelViewer.h  OpenGLESRenderer.h  OpenXRApp.h  QuadsViewer.h  SceneViewer.h
QuestClientApps/Apps/QuestClient/src/: OpenGLESRenderer.cpp  main.cpp
QuestClientApps/Apps/SceneViewer/: CMakeLists.txt
QuestClientApps/Apps/SceneViewer/include/: SceneViewer.h
QuestClientApps/Apps/SceneViewer/src/: main.cpp
QuestClientApps/Libs/: CMakeLists.txt
QuestClientApps/Libs/ffmpeg-libs/: CMakeLists.txt
QuestClientApps/Libs/include/: DebugOutput.h  GraphicsAPI.h  OpenGLESRenderer.h  OpenXRApp.h
QuestClientApps/Libs/include/Utils/: GLM_XR_Interop.h
QuestClientApps/Libs/src/: GraphicsAPI.cpp  OpenGLESRenderer.cpp
QuestClientApps/Libs/src/Utils/: OpenXRDebugUtils.cpp
QuestClientApps/assets/dpwarp/: depthOffsets0.bin.lz4  depthOffsets1.bin.lz4  depthOffsets2.bin.lz4  depthOffsets3.bin.lz4  depthOffsets4.bin.lz4  quads1.bin.lz4  quads4.bin.lz4
QuestClientApps/assets/dpwarp/robot_lab/: depthOffsets0.bin.zstd  depthOffsets1.bin.zstd  depthOffsets3.bin.zstd  depthOffsets4.bin.zstd  quads0.bin.zstd  quads1.bin.zstd  quads2.bin.zstd  quads3.bin.zstd  quads4.bin.zstd
QuestClientApps/assets/dpwarp/robotlab/: depthOffsets1.bin.lz4  depthOffsets2.bin.zstd  quads0.bin.lz4  quads1.bin.lz4  quads1.bin.zstd  quads2.bin.lz4  quads3.bin.lz4  quads3.bin.zstd  quads4.bin.lz4
QuestClientApps/assets/dpwarp/san_miguel/: depthOffsets1.bin.zstd  depthOffsets2.bin.zstd  quads0.bin.zstd  quads1.bin.zstd  quads2.bin.zstd  quads3.bin.zstd  quads4.bin.zstd
QuestClientApps/assets/dpwarp/sun_temple/: depthOffsets0.bin.zstd  depthOffsets1.bin.zstd  depthOffsets2.bin.zstd  depthOffsets3.bin.zstd  depthOffsets4.bin.zstd  quads0.bin.zstd  quads1.bin.zstd  quads2.bin.zstd  quads3.bin.zstd  quads4.bin.zstd
QuestClientApps/assets/dpwarp/viking_village/: depthOffsets0.bin.zstd  depthOffsets1.bin.zstd  depthOffsets2.bin.zstd  depthOffsets3.bin.zstd  depthOffsets4.bin.zstd  quads0.bin.zstd  quads1.bin.zstd  quads2.bin.zstd  quads3.bin.zstd  quads4.bin.zstd
QuestClientApps/assets/models/: SanMiguel.glb  SunTemple.glb  VikingVillage.glb
QuestClientApps/assets/quadwarp/: depthOffsets.bin.lz4  quads.bin.lz4
QuestClientApps/assets/quadwarp/robot_lab/: quads.bin.zstd
QuestClientApps/assets/quadwarp/robotlab/: depthOffsets.bin.lz4  depthOffsets.bin.zstd  quads.bin.lz4
QuestClientApps/assets/quadwarp/san_miguel/: depthOffsets.bin.zstd  quads.bin.zstd
QuestClientApps/assets/quadwarp/sun_temple/: quads.bin.zstd
QuestClientApps/assets/quadwarp/viking_village/: quads.bin.zstd
QuestClientApps/assets/shaders/: appendProxies.comp  createMeshFromQuads.comp  fillQuadIndices.comp
QuestClientApps/cmake/: embedfile.py  graphics_api_select.cmake
QuestClientApps/gradle/wrapper/: gradle-wrapper.properties
app/: AndroidManifest.xml  CMakeLists.txt  assets  build.gradle
app/assets/: stream.sdp
app/assets/shaders/: atw.frag  common.vert  displayColor.frag  genMesh.comp  material_unlit.frag  postprocess.vert
app/cpp/: CMakeLists.txt  main.cpp
app/cpp/common/: GraphicsAPI.h  HelperFunctions.h
app/cpp/include/: ATWClient.h  GraphicsAPI.h  MeshWarpClient.h  MeshWarpClientLive.h  MeshWarpClientStatic.h  OpenGLESRenderer.h  OpenXRApp.h  OpenXRDebugUtils.h  QuadsViewer.h
app/cpp/include/Utils/: FileIO.h  GLM_XR_Interop.h  HelperFunctions.h  OpenXRDebugUtils.h
app/cpp/shaders/: CMakeLists.txt  atw.frag  common.vert  displayColor.frag  material_unlit.frag  postprocess.vert
app/cpp/shaders/IBL/: brdf.frag  irradianceConvolution.frag  prefilter.frag
app/cpp/shaders/cubemap/: cubemap.vert  equirectangular2cubemap.frag
app/cpp/shaders/postprocessing/: displayColor.frag  displayDepth.frag  displayIDs.frag  displayNormals.frag  displayPositions.frag  displayTexture.frag
app/cpp/shaders/shadows/: dirShadow.frag  dirShadow.vert  pointShadow.frag  pointShadow.geom  pointShadow.vert
app/cpp/shaders/skybox/: skybox.frag  skybox.vert
app/cpp/src/: GraphicsAPI_OpenGL_ES.cpp  OpenGLESRenderer.cpp  main.cpp
app/cpp/src/Utils/: FileIO.cpp
app/shaders/: shaders.h
app/src/main/: AndroidManifest.xml
(+109 files in other folders)
